--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,21 @@
 {
 	"name": "archodex-backend-dev",
 	"image": "rust:latest",
+	"mounts": [
+		// Allow access to AWS credentials for archodex.com development
+		"type=bind,source=${localEnv:HOME}/.aws,target=/home/vscode/.aws",
+		// Cache dependencies to speed up container rebuilds
+		"type=volume,source=archodex-dev-apt-archives,target=/var/cache/apt/archives",
+		"type=volume,source=archodex-dev-apt-lists,target=/var/lib/apt/lists",
+		"type=volume,source=archodex-dev-rustup,target=/usr/local/rustup",
+		// Cache cargo artifacts to speed up builds across container rebuilds
+		"type=volume,source=archodex-dev-cargo-registry,target=/usr/local/cargo/registry",
+		"type=volume,source=archodex-dev-cargo-git,target=/usr/local/cargo/git",
+		"type=volume,source=archodex-backend-dev-target,target=/workspaces/archodex-backend/target"
+	],
+	"containerUser": "vscode",
 	"features": {
+		"ghcr.io/devcontainers/features/aws-cli:1": {},
 		"ghcr.io/devcontainers/features/common-utils:2": {
 			"installZsh": "true",
 			"username": "vscode",
@@ -12,7 +26,8 @@
 			"moby": false
 		}
 	},
-	"remoteUser": "vscode",
+	"postCreateCommand": ".devcontainer/init.sh",
+	"postStartCommand": ".devcontainer/start.sh",
 	"customizations": {
 		"vscode": {
 			"extensions": [
@@ -23,6 +38,5 @@
 				"xaver.clang-format"
 			]
 		}
-	},
-	"postCreateCommand": ".devcontainer/init.sh"
+	}
 }
