--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -15,4 +15,4 @@ tracing.workspace = true
 tracing-subscriber.workspace = true
 
 [features]
-archodex-com = ["archodex-backend/archodex-com"]
+archodex-com = ["archodex-backend/archodex-com", "migrator/archodex-com"]
