--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,6 +21,12 @@
       },
       "args": [],
       "cwd": "${workspaceFolder}",
+      "env": {
+        "COLORTERM": "truecolor",
+        "ENDPOINT": "http://localhost:5732",
+        "RUST_BACKTRACE": "1"
+      },
+      // Additional environment variables may be defined here, see template file
       "envFile": "${workspaceFolder}/.vscode/.env.self-hosted",
     },
     {
@@ -42,6 +48,12 @@
       },
       "args": [],
       "cwd": "${workspaceFolder}",
+      "env": {
+        "COLORTERM": "truecolor",
+        "ENDPOINT": "http://localhost:5731",
+        "RUST_BACKTRACE": "1"
+      },
+      // Additional environment variables must be defined here, see template file
       "envFile": "${workspaceFolder}/.vscode/.env.archodex-com",
     }
   ]
