Fix cargo check errors due to archodex-specific code

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ version.workspace = true
 edition.workspace = true
 
 [features]
-archodex-com = ["dep:archodex-com"]
+archodex-com = ["dep:archodex-com", "archodex-com/archodex-com"]
 
 [dependencies]
 aes-gcm.workspace = true
