--- a/archodex-com/Cargo.toml
+++ b/archodex-com/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "archodex-com"
 edition.workspace = true
-version = "1.0.0+20ff22e25440e6494298e842923f19d9c26354c1"
+version = "1.0.0+ab5bb4c53a6fa874dc7c2a3d57bb844a6415f229"
 
 [lib]
 path = "src/lib.rs"
@@ -33,3 +33,6 @@ serde_json.workspace = true
 surrealdb.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+
+[features]
+archodex-com = []
